--- a/caker/styles/signUp.css
+++ b/caker/styles/signUp.css
@@ -316,4 +316,442 @@ button:hover {
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/* Typography */
+body,
+ul,
+li,
+p,
+a,
+label,
+input,
+div {
+  font-family: "Cormorant SC", serif;
+  text-transform: lowercase;
+  font-size: 18px !important;
+  font-weight: 300 !important;
+}
+.h1 {
+  font-family: "Cormorant SC", serif;
+  font-size: 33px !important;
+  font-weight: 400 !important;
+}
+.h2 {
+  font-family: "Cormorant SC", serif;
+  font-size: 30px !important;
+  font-weight: 300;
+}
+.h3 {
+  font-family: "Cormorant SC", serif;
+  font-size: 22px !important;
+}
+
+/* General */
+.logo {
+  font-weight: 500 !important;
+}
+.text-warning {
+  color: #c49e42 !important;
+}
+.text-muted {
+  color: #7a6e6e !important;
+}
+.text-success {
+  color: #c49e42 !important;
+}
+.text-light {
+  color: #494b4e !important;
+}
+.bg-dark {
+  background-color: #f6f2e6 !important;
+}
+.bg-light {
+  background-color: #f6f2e6 !important;
+}
+.bg-black {
+  background-color: #c49e42 !important;
+}
+.bg-success {
+  background-color: #c49e42 !important;
+}
+/* button footer en bas */
+.btn-success {
+  background-color: #c49e42 !important;
+  border-color: #c49e42 !important;
+}
+.bg {
+  background-color: #000000 !important;
+}
+.pagination .page-link:hover {
+  color: #000;
+}
+.pagination .page-link:hover,
+.pagination .page-link.active {
+  background-color: #c49e42;
+  color: #fff;
+}
+/* Nav */
+#templatemo_nav_top {
+  min-height: 40px;
+}
+#templatemo_nav_top * {
+  font-size: 0.9em !important;
+}
+#templatemo_main_nav a {
+  color: #dab618;
+}
+#templatemo_main_nav a:hover {
+  color: #993a3a !important;
+}
+#templatemo_main_nav .navbar .nav-icon {
+  margin-right: 20px;
+}
+
+/* Hero Carousel */
+#template-mo-zay-hero-carousel {
+  background: #ffffff !important;
+}
+/* Accordion */
+.templatemo-accordion a {
+  color: #000;
+}
+.templatemo-accordion a:hover {
+  color: #333d4a;
+}
+
+/* Shop */
+/* .shop-top-menu a:hover { color: #a74ca2 !important;} */
+/* Product */
+/* .product-wap { box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.10);}
+.product-wap .product-color-dot.color-dot-red { background:#f71515;}
+.product-wap .product-color-dot.color-dot-blue { background:#6db4fe;}
+.product-wap .product-color-dot.color-dot-black { background:#000000;}
+.product-wap .product-color-dot.color-dot-light { background:#e0e0e0;}
+.product-wap .product-color-dot.color-dot-green { background:#0bff7e;} */
+.card.product-wap .card .product-overlay {
+  background: rgba(0, 0, 0, 0.2);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+}
+.card.product-wap:hover .card .product-overlay {
+  visibility: visible;
+  opacity: 1;
+}
+.card.product-wap a {
+  color: #000;
+}
+#carousel-related-product .slick-slide:focus {
+  outline: none !important;
+}
+#carousel-related-product .slick-dots li button:before {
+  font-size: 15px;
+  margin-top: 20px;
+}
+/* Brand */
+/* .brand-img {
+  filter: grayscale(100%);
+  opacity: 0.5 ;
+  transition: .5s;
+}
+.brand-img:hover {
+  filter: grayscale(0%);
+  opacity: 1;
+} */
+/* Carousel Hero */
+#template-mo-zay-hero-carousel .carousel-indicators li {
+  margin-top: -50px;
+  background-color: #dab618;
+}
+#template-mo-zay-hero-carousel .carousel-control-next i,
+#template-mo-zay-hero-carousel .carousel-control-prev i {
+  color: #dab618 !important;
+  font-size: 2.8em !important;
+}
+/* Carousel Brand */
+.tempaltemo-carousel .h1 {
+  font-size: 0.5em !important;
+  color: rgb(255, 255, 255) !important;
+}
+/* Services */
+.services-icon-wap {
+  transition: 0.3s;
+}
+.services-icon-wap:hover,
+.services-icon-wap:hover i {
+  color: #fff;
+}
+.services-icon-wap:hover {
+  background: #c49e42;
+}
+/* Contact map */
+.leaflet-control a,
+.leaflet-control {
+  font-size: 10px !important;
+}
+.form-control {
+  border: 1px solid #e8e8e8;
+}
+/* Footer */
+.bg {
+  background-color: rgb(240, 233, 237);
+}
+#tempaltemo_footer a {
+  color: #c49e42;
+}
+#tempaltemo_footer a:hover {
+  color: #ffffff;
+}
+#tempaltemo_footer ul.footer-link-list li {
+  padding-top: 10px;
+}
+#tempaltemo_footer ul.footer-icons li {
+  width: 2.6em;
+  height: 2.6em;
+  line-height: 2.6em;
+}
+#tempaltemo_footer ul.footer-icons li:hover {
+  background-color: #cfd6e1;
+  transition: 0.5s;
+}
+#tempaltemo_footer ul.footer-icons li:hover i {
+  color: #917833;
+  transition: 0.5s;
+}
+#tempaltemo_footer .border-light {
+  border-color: #f5f4db !important;
+}
+/*
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+*/
+/* Small devices (landscape phones, 576px and up)*/
+.product-wap .h3,
+.product-wap li,
+.product-wap i,
+.product-wap p {
+  font-size: 12px !important;
+}
+.product-wap .product-color-dot {
+  width: 6px;
+  height: 6px;
+}
+/* TITRE PAGE HOME*/
+/* MAIN */
+.univers {
+  color: #000;
+}
+h2 span {
+  font-family: "Vibes", cursive;
+  font-size: 34px;
+}
+
+/* PAGE PATISSIER */
+/* HEADER */
+.black {
+  background: black !important;
+}
+a.nav-link {
+  color: #c49e42 !important;
+}
+a.nav-link:hover {
+  color: #e6d1a1 !important;
+}
+.user {
+  color: white;
+}
+/* MAIN */
+main {
+  background: #000;
+  color: #f5f4db;
+}
+/* COMMANDE DE GATEAU */
+/* TITRE */
+.or {
+  color: #c49e42 !important;
+}
+.or:hover {
+  color: #e6d1a1 !important;
+}
+.white {
+  color: #5e4409 !important;
+}
+/* SOUS ONGLET */
+.red {
+  color: white !important;
+}
+
+/* paragraphe */
+.justify {
+  text-align: justify;
+  text-transform: lowercase !important;
+  font-family: "Cormorant SC", serif;
+}
+
+/* FOOTER */
+h2.footer {
+  font-family: "Cormorant SC", serif;
+  font-size: 25px !important;
+  font-weight: 500;
+}
+
+/* PAGE SHOP 1,2,3,4,5,6 */
+/* ONGLET VOIR PROFIL */
+.profilshop {
+  color: #000;
+}
+.orshop {
+  color: #c49e42 !important;
+}
+
+/* PAGE PROFIL */
+/* BOUTON DÉCONNECTION */
+
+.deco {
+  color: red;
+}
+body {
+  background: #f5f5f5;
+  margin-top: 20px;
+}
+.profil {
+  color: #c49e42 !important;
+}
+
+.ui-w-80 {
+  width: 80px !important;
+  height: auto;
+}
+
+.btn-default {
+  border-color: rgba(24, 28, 33, 0.1);
+  background: rgba(0, 0, 0, 0);
+  color: #4e5155;
+}
+
+label.btn {
+  margin-bottom: 0;
+}
+
+.avatar.btn-outline-primary {
+  border-color: #c49e42;
+  background: transparent;
+  color: #f5f5f5;
+  background-color: #c49e42;
+  border-radius: 1em;
+}
+.avatar.btn-outline-primary:hover {
+  background-color: whitesmoke;
+  color: #c49e42;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+.text-light {
+  color: #babbbc !important;
+}
+
+.btn-facebook {
+  border-color: rgba(0, 0, 0, 0);
+  background: #c49e42;
+  color: #fff;
+}
+
+.btn-instagram {
+  border-color: rgba(0, 0, 0, 0);
+  background: #c49e42;
+  color: #fff;
+}
+
+.card {
+  background-clip: padding-box;
+  box-shadow: 0 1px 4px rgba(24, 28, 33, 0.012);
+}
+
+.row-bordered {
+  overflow: hidden;
+}
+
+.account-settings-fileinput {
+  position: absolute;
+  visibility: hidden;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+}
+.account-settings-links .list-group-item.active {
+  font-weight: bold !important;
+}
+html:not(.dark-style) .account-settings-links .list-group-item.active {
+  background: transparent !important;
+}
+.account-settings-multiselect ~ .select2-container {
+  width: 100% !important;
+}
+.light-style .account-settings-links .list-group-item {
+  padding: 0.85rem 1.5rem;
+  border-color: rgba(24, 28, 33, 0.03) !important;
+}
+.light-style .account-settings-links .list-group-item.active {
+  color: #4e5155 !important;
+}
+.material-style .account-settings-links .list-group-item {
+  padding: 0.85rem 1.5rem;
+  border-color: rgba(24, 28, 33, 0.03) !important;
+}
+.material-style .account-settings-links .list-group-item.active {
+  color: #4e5155 !important;
+}
+.dark-style .account-settings-links .list-group-item {
+  padding: 0.85rem 1.5rem;
+  border-color: rgba(255, 255, 255, 0.03) !important;
+}
+.dark-style .account-settings-links .list-group-item.active {
+  color: #fff !important;
+}
+.light-style .account-settings-links .list-group-item.active {
+  color: #4e5155 !important;
+}
+.light-style .account-settings-links .list-group-item {
+  padding: 0.85rem 1.5rem;
+  border-color: rgba(24, 28, 33, 0.03) !important;
+}
+
+/* MOBILE */
+@media (min-width: 576px) {
+  .tempaltemo-carousel .h1 {
+    font-size: 1em !important;
+  }
+}
+
+/*// Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+  #templatemo_main_nav .navbar-nav {
+    max-width: 450px;
+  }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+  #templatemo_main_nav .navbar-nav {
+    max-width: 600px;
+  }
+  #template-mo-zay-hero-carousel .carousel-item {
+    min-height: 30rem !important;
+  }
+  .product-wap .h3,
+  .product-wap li,
+  .product-wap i,
+  .product-wap p {
+    font-size: 18px !important;
+  }
+  .product-wap .product-color-dot {
+    width: 12px;
+    height: 12px;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+}
