feat:modify page profil création formlabel

--- a/caker/styles/signUp.css
+++ b/caker/styles/signUp.css
@@ -575,13 +575,10 @@ body {
   background: #f5f5f5;
   margin-top: 20px;
 }
+
 .profil {
   color: #c49e42 !important;
-}
-
-.ui-w-80 {
-  width: 80px !important;
-  height: auto;
+  font-size: 30px;
 }
 
 .btn-default {
@@ -600,6 +597,7 @@ label.btn {
   color: #f5f5f5;
   background-color: #c49e42;
   border-radius: 1em;
+  font-size: 12px;
 }
 .avatar.btn-outline-primary:hover {
   background-color: whitesmoke;
@@ -613,71 +611,12 @@ label.btn {
 .text-light {
   color: #babbbc !important;
 }
-
-.btn-facebook {
-  border-color: rgba(0, 0, 0, 0);
-  background: #c49e42;
-  color: #fff;
+.form-label {
+  color: #232a30;
 }
-
-.btn-instagram {
-  border-color: rgba(0, 0, 0, 0);
-  background: #c49e42;
-  color: #fff;
-}
-
-.card {
-  background-clip: padding-box;
-  box-shadow: 0 1px 4px rgba(24, 28, 33, 0.012);
-}
-
-.row-bordered {
-  overflow: hidden;
-}
-
-.account-settings-fileinput {
-  position: absolute;
-  visibility: hidden;
-  width: 1px;
-  height: 1px;
-  opacity: 0;
-}
-.account-settings-links .list-group-item.active {
-  font-weight: bold !important;
-}
-html:not(.dark-style) .account-settings-links .list-group-item.active {
-  background: transparent !important;
-}
-.account-settings-multiselect ~ .select2-container {
-  width: 100% !important;
-}
-.light-style .account-settings-links .list-group-item {
-  padding: 0.85rem 1.5rem;
-  border-color: rgba(24, 28, 33, 0.03) !important;
-}
-.light-style .account-settings-links .list-group-item.active {
-  color: #4e5155 !important;
-}
-.material-style .account-settings-links .list-group-item {
-  padding: 0.85rem 1.5rem;
-  border-color: rgba(24, 28, 33, 0.03) !important;
-}
-.material-style .account-settings-links .list-group-item.active {
-  color: #4e5155 !important;
-}
-.dark-style .account-settings-links .list-group-item {
-  padding: 0.85rem 1.5rem;
-  border-color: rgba(255, 255, 255, 0.03) !important;
-}
-.dark-style .account-settings-links .list-group-item.active {
-  color: #fff !important;
-}
-.light-style .account-settings-links .list-group-item.active {
-  color: #4e5155 !important;
-}
-.light-style .account-settings-links .list-group-item {
-  padding: 0.85rem 1.5rem;
-  border-color: rgba(24, 28, 33, 0.03) !important;
+.h1 profil {
+  color: #c49e42;
+  font-size: 30px !important;
 }
 
 /* MOBILE */
