--- a/caker/styles/signUp.css
+++ b/caker/styles/signUp.css
@@ -663,3 +663,177 @@ label.btn {
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
 }
+/* PANIER*/
+
+.cartBody {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom right, rgb(243, 223, 182), #fafcff);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CartContainer {
+  padding-bottom: 15px;
+  width: 70%;
+  height: 90%;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0px 10px 20px #cca53a33;
+  font-family: "Cormorant SC", serif;
+}
+
+.headerCart {
+  margin: auto;
+  width: 90%;
+  height: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Cormorant SC", serif;
+}
+
+.Heading {
+  font-size: 20px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 700;
+  color: #2f3841;
+}
+
+.Action {
+  font-size: 14px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 600;
+  color: #c49e42;
+  cursor: pointer;
+  border-bottom: 1px solid #c49e42;
+}
+
+.Cart-Items {
+  margin: auto;
+  width: 90%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about {
+  height: 100%;
+  width: 24%;
+}
+.titleCard {
+  padding-top: 10px;
+
+  font-size: 15px;
+  font-family: "Cormorant SC", serif;
+  text-transform: uppercase;
+  color: #3a2e20;
+}
+
+.counterCard {
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.btnCartShop {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #d9d9d9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 900;
+  color: #202020;
+  cursor: pointer;
+}
+.countCard {
+  font-size: 20px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 600;
+  color: #202020;
+}
+
+.pricesCard {
+  height: 100%;
+  text-align: right;
+}
+.amount {
+  padding-top: 20px;
+  font-size: 26px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 800;
+  color: #202020;
+}
+.save {
+  cursor: pointer;
+}
+.remove {
+  cursor: pointer;
+}
+
+.pad {
+  margin-top: 5px;
+}
+
+hr {
+  width: 66%;
+  float: right;
+  margin-right: 5%;
+}
+.checkout {
+  float: right;
+  margin-right: 5%;
+  width: 28%;
+}
+.total {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.Subtotal {
+  font-size: 22px;
+  font-family: "Open Sans";
+  font-weight: 700;
+  color: #202020;
+}
+.itemsCard {
+  font-size: 16px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 500;
+  color: #909090;
+  line-height: 10px;
+}
+.total-amount {
+  font-size: 36px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 900;
+  color: #202020;
+}
+.buttonCard {
+  margin-top: 5px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  background: linear-gradient(to bottom right, #dbc799, #c49e42);
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: "Cormorant SC", serif;
+
+  font-weight: 600;
+  color: #ffffff;
+}
