feat modify Contact and Patisserie and create FormContact compenets

--- a/caker/styles/globals.css
+++ b/caker/styles/globals.css
@@ -242,8 +242,8 @@ a.nav-link:hover {
 }
 /* MAIN */
 main {
-  background: #000;
-  color: #f5f4db;
+  background: #f6f2e6;
+  color: #000000;
 }
 /* COMMANDE DE GATEAU */
 /* TITRE */
