feat modify shop1,Link,Signup,VendsTesPtisserie create page Commentaire

--- a/caker/styles/signUp.css
+++ b/caker/styles/signUp.css
@@ -44,6 +44,11 @@ a:hover {
 :focus {
   outline: none;
 }
+#setPrice::-webkit-outer-spin-button,
+#setPrice::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 .wrapper {
   min-height: 100vh;
